--- a/TPI NewWare/Formularios/FrmInicio.resx
+++ b/TPI NewWare/Formularios/FrmInicio.resx
@@ -385,6 +385,9 @@
         HF+VsArjzu6zAEiL9//i/wNqW2G/rvjp6gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="panelPrincipal.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
